LA/tests/test107.a
void main ( ){

  int64[] a
  a <- new Array(2)
  print(a)
  a[0] <- 4
  a[1] <- 4

  a[2] <- 4
  return 
}
